# wc2026

./: .env.example  .gitignore  DATA_REQUIRED.md  FETCHING.md  HOSTING.md  HOW_TO_RUN.html  HOW_TO_RUN.md  README.md  STRUCTURE.md  USER_MANUAL.md  WorldCup2026_PredictionEngine.xlsx  pyproject.toml  requirements.txt  vercel.json  wc2026_elo.csv  wc2026_results.csv  wc2026_results.xlsx
backtest/: README_BACKTEST.md  README_FEATURE_IMPORTANCE.md  backtest.py  calibrate_sigma.py  feature_importance.py  fit_goals_model.py  live_market_scorecard.py  validate_features.py  validate_synthetic.py
data/: match_odds.csv  match_odds.example.csv  odds_champion.csv  odds_champion.example.csv  schedule.csv  squad_values.csv  squad_values_history.csv
docs/: METHODOLOGY.md  PENALTYBLOG_EVALUATION.md
outputs/: Forecast Tracker.dc.html  Methodology.dc.html  WCData.js  about.html  dashboard.html  forecast_2026-06-13.csv  forecast_2026-06-14.csv  forecast_2026-06-15.csv  forecast_2026-06-17.csv  forecast_2026-06-18.csv  forecast_2026-06-19.csv  forecast_2026-06-20.csv  forecast_2026-06-21.csv  forecast_2026-06-22.csv  forecast_2026-06-23.csv  forecast_2026-06-24.csv  forecast_2026-06-25.csv  forecast_2026-06-26.csv  forecast_2026-06-27.csv  forecast_2026-06-28.csv  forecast_2026-06-29.csv  forecast_2026-06-30.csv  forecast_2026-07-01.csv  forecast_2026-07-02.csv  forecast_2026-07-03.csv  forecast_2026-07-04.csv  forecast_2026-07-05.csv  forecast_2026-07-06.csv  forecast_2026-07-07.csv  forecast_2026-07-08.csv  forecast_2026-07-09.csv  forecast_2026-07-10.csv  forecast_2026-07-11.csv  (+37 more)
(+39 files in other folders)
