[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026"
version = "0.2.0"
description = "World Cup 2026 Monte Carlo forecasting engine + out-of-sample backtest harness"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas"]

[project.optional-dependencies]
excel = ["openpyxl"]
backtest = ["matplotlib"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
# Note: on some sandboxed/mounted filesystems pytest's temp-dir cleanup can
# recurse on shutdown. If you hit that, pass: --basetemp=/tmp/ptmp
